Edited wiki page through web user interface.

--- a/wiki/Refactor_SplitStringContrib.wiki
+++ b/wiki/Refactor_SplitStringContrib.wiki
@@ -1,27 +1,36 @@
-#summary Allows to break string into 2 lines using standard "Split String" refactoring.
+#summary Allows to break string literal into 2 lines using standard "Split String" refactoring. Also allows to use '&' as concatenation operator used by this refactoring in VB documents.
 [http://www.rorybecker.me.uk/DevExpress/Plugins/Community/Refactor_SplitStringContrib/ http://dxcorecommunityplugins.googlecode.com/svn/trunk/Common/Graphics/Download.png]      [http://code.google.com/p/dxcorecommunityplugins/wiki/InstallInstructions  http://dxcorecommunityplugins.googlecode.com/svn/trunk/Common/Graphics/InstallHelp.png]
 
 = Introduction =
 
-This plugin adds single option to Refactor Pro. When caret is inside string, you can fast and easy split it into two at the caret position. What is more, right string will be moved to the next line, together with concatenation operator.
+This plugin enhances "Split String" refactoring provided with Refactor Pro. It allows VB developers to use '&' instead of '+' as their concatenation operator. Also, when caret is inside string, you can fast and easy split it into two at the caret position. What is more, right string will be moved to the next line.
 
-Features were implemented in language agnostic way. However, plugin was tested only in c# environment. If you find any troubles using it, post issue and I try to fix it ASAP.
+Features were implemented in language agnostic way. However, plugin was tested only in C# and VB environments. If you find any troubles using it, post issue and I try to fix it ASAP.
 
 = Usage =
 
 Implementation of this plugin uses standard "Split String" refactoring available with CodeRush. AFAIK free versions of CodeRush and Refactor don't contain this refactoring, so you will need full version of Refactor Pro in order to use this plugin. Sorry.
 
-This plugin works "as you type". Its single feature is triggered with enter key:
+First feature is integrated with "Split String" refactoring. In VB you can use '&' instead of '+' as your preferred concatenation operator.
+
+Second feature works "as you type":
 
 {{{
 string myString = "Some long string that| should be splitted";
 }}}
 
-will be converted with enter to:
+will be converted with enter into:
 
 {{{
 string myString = "Some long string that"
     |+ " should be splitted";
+}}}
+
+or into (depending on settings):
+
+{{{
+string myString = "Some long string that" +
+    |" should be splitted";
 }}}
 
 | denotes caret in above listings.
@@ -32,7 +41,7 @@ SplitStringContrib is fully configurable. Options page can be found in "Editor/R
 
 = Known Issues =
 
-VB developers may prefer "&" instead of "+" as concatenation operator. This is currently not supported, because this is limitation of "Split String" refactoring. Please track http://www.devexpress.com/Support/Center/p/B135602.aspx suggestion to bump this issue up in DevExpress priority queue.
+When "Use '&' as concatenation operator in VB" option is active, emited code will use '&' but refactoring preview will still show '+'. This is limitation of standard "Split String" refactoring. Please track http://www.devexpress.com/Support/Center/p/B135602.aspx suggestion to bump this issue up in DevExpress priority queue.
 
 = Credits =
 
