--- a/wiki/CodeIssueAnalysis.wiki
+++ b/wiki/CodeIssueAnalysis.wiki
@@ -1,4 +1,6 @@
-#Summarises all code issues in a project or solution.
+#summary Summarises all code issues in a project or solution.
+
+[http://www.rorybecker.me.uk/DevExpress/Plugins/Community/CodeIssueAnalysis/ http://dxcorecommunityplugins.googlecode.com/svn/trunk/Common/Graphics/Download.png]            [http://code.google.com/p/dxcorecommunityplugins/wiki/InstallInstructions  http://dxcorecommunityplugins.googlecode.com/svn/trunk/Common/Graphics/InstallHelp.png]
 
 = Introduction =
 
