Edited wiki page through web user interface.

--- a/wiki/CR_NavigateToDefinition.wiki
+++ b/wiki/CR_NavigateToDefinition.wiki
@@ -9,10 +9,10 @@ You can bind a key (or just use the Navigate menu) to navigate to the definition
 
 This plugin could help until DevExpress implements [http://www.devexpress.com/Support/Center/p/S131637.aspx this suggestion made by Rory] (that should be the ultimate solution for the "Go To Definition" metadata problem!)
 
-= Details =
+= Installation =
 
     * [http://www.rorybecker.me.uk/DevExpress/Plugins/Community/CR_NavigateToDefinition/ Download]
-    * Install as usual
+    * [http://code.google.com/p/dxcorecommunityplugins/wiki/InstallInstructions Install as usual]
     * Assign the 'NavigateToDefinition' action to a key.
     * Change the settings as needed in DevExpress options -> Editor -> Navigation -> Navigate To Definition
 
