--- a/wiki/CR_NavigateToDefinition.wiki
+++ b/wiki/CR_NavigateToDefinition.wiki
@@ -16,4 +16,12 @@ This plugin could help until DevExpress implements [http://www.devexpress.com/Su
     * Assign the 'NavigateToDefinition' action to a key.
     * Change the settings as needed in DevExpress options -> Editor -> Navigation -> Navigate To Definition
 
+= Screenshots =
+
+http://code.google.com/p/dxcorecommunityplugins/source/browse/trunk/CR_NavigateToDefinition/CR_NavigateToDefinition/images/options_page.png
+
+http://code.google.com/p/dxcorecommunityplugins/source/browse/trunk/CR_NavigateToDefinition/CR_NavigateToDefinition/images/jump_to.png
+
+http://code.google.com/p/dxcorecommunityplugins/source/browse/trunk/CR_NavigateToDefinition/CR_NavigateToDefinition/images/jump_to_navigate.png
+
 Original Author: Jorge Rowies
