--- a/wiki/DX_GuidGen.wiki
+++ b/wiki/DX_GuidGen.wiki
@@ -7,10 +7,10 @@
 Does exactly what it says on the tin.. Generates a guid.
 
 = Configuration =
-so anywhere you can use string providers... tetmaplates, Selection Embedding / Inversion etc... Just use the phrase "«?GenerateGuid»" without quotes and this will cause a new Guid to be generated in tht location.
+So anywhere you can use string providers... tetmaplates, Selection Embedding / Inversion etc... Just use the phrase "«?GenerateGuid»" without quotes and this will cause a new Guid to be generated in tht location.
 
-for example..
- * Create a new template ( in the neutral language category for best effec).
+For example..
+ * Create a new template (in the neutral language category for best effect).
  * Name this template "NewGuid" (without quotes) 
  * Set content of Template to "«?GenerateGuid»" (without quotes) 
  * Click Ok to save everything
