--- a/wiki/PageName.wiki
+++ b/wiki/PageName.wiki
@@ -2,8 +2,8 @@
 [http://www.rorybecker.me.uk/DevExpress/Plugins/Community/CR_StyleNinja http://dxcorecommunityplugins.googlecode.com/svn/trunk/Common/Graphics/Download.png]      [http://code.google.com/p/dxcorecommunityplugins/wiki/InstallInstructions  http://dxcorecommunityplugins.googlecode.com/svn/trunk/Common/Graphics/InstallHelp.png]
 
 = Introduction =
-Provides StyleCop style hints through the CodeRush CodeIssues interface without the need to install StyleCop. 
-These hints/rules will work across languages using user preferences (as stored in CodeRush style settings) rather that actual StyleCop rules, where applicable.
+Provides StyleCop! style hints through the CodeRush! CodeIssues! interface without the need to install StyleCop!. 
+These hints/rules will work across languages using user preferences (as stored in CodeRush!'s style settings) rather that actual StyleCop rules, where applicable.
 
 = Usage =
 These rules will work as long as the CodeIssues function is turned on. 
